force-app/main/default/objects/Lead/fields/AcceptWhatsapp__c.field-meta.xml
<CustomField>
    <fullName>AcceptWhatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Whatsapp</label>
    <type>Checkbox</type>
</CustomField>