force-app/main/default/objects/Lead/fields/AddressNo__c.field-meta.xml
<CustomField>
    <fullName>AddressNo__c</fullName>
    <label>Address No</label>
    <type>TextArea</type>
</CustomField>