force-app/main/default/objects/Lead/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>วงเงินที่ตั้งไว้</description>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less 7 MB.</fullName>
            </value>
            <value>
                <fullName>9 - 10 MB.</fullName>
            </value>
            <value>
                <fullName>11 - 15 MB.</fullName>
            </value>
            <value>
                <fullName>16 - 20 MB.</fullName>
            </value>
            <value>
                <fullName>20 - 30 MB.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>