force-app/main/default/objects/Lead/fields/ConvertedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>ConvertedOpportunity__c</fullName>
    <formula>ConvertedtoOpportunity__r.TotalCustomerVisit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>