force-app/main/default/objects/Lead/fields/ConvertedtoOpportunity__c.field-meta.xml
<CustomField>
    <fullName>ConvertedtoOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted to Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>