force-app/main/default/objects/Lead/fields/CountryWithCode__c.field-meta.xml
<CustomField>
    <fullName>CountryWithCode__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryWithCode</valueSetName>
    </valueSet>
</CustomField>