force-app/main/default/objects/Lead/fields/IsAutoAssingment__c.field-meta.xml
<CustomField>
    <fullName>IsAutoAssingment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Assingment</label>
    <type>Checkbox</type>
</CustomField>