force-app/main/default/objects/Lead/fields/LeadCountry__c.field-meta.xml
<CustomField>
    <fullName>LeadCountry__c</fullName>
    <label>Lead Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LeadCountry</valueSetName>
    </valueSet>
</CustomField>