force-app/main/default/objects/Lead/fields/LeadOrigin__c.field-meta.xml
<CustomField>
    <fullName>LeadOrigin__c</fullName>
    <label>Lead Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Key in</fullName>
            </value>
            <value>
                <fullName>Upload</fullName>
            </value>
            <value>
                <fullName>Web-to-Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>