force-app/main/default/objects/Lead/fields/ProjectInterest__c.field-meta.xml
<CustomField>
    <fullName>ProjectInterest__c</fullName>
    <label>Project Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>