force-app/main/default/objects/Lead/fields/ProjectsInterest__c.field-meta.xml
<CustomField>
    <fullName>ProjectsInterest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projects Interest</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>