force-app/main/default/objects/Lead/fields/RejectReason__c.field-meta.xml
<CustomField>
    <fullName>RejectReason__c</fullName>
    <label>Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fake Lead</fullName>
            </value>
            <value>
                <fullName>Faulty Registration</fullName>
            </value>
            <value>
                <fullName>Out of Reach</fullName>
            </value>
            <value>
                <fullName>Over Budget</fullName>
            </value>
            <value>
                <fullName>SPAM</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>