force-app/main/default/objects/Lead/fields/RejectReasonOther__c.field-meta.xml
<CustomField>
    <fullName>RejectReasonOther__c</fullName>
    <label>Reject Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>