force-app/main/default/objects/Lead/fields/SalesLead__c.field-meta.xml
<CustomField>
    <fullName>SalesLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>