force-app/main/default/objects/Lead/fields/SocialMedia__c.field-meta.xml
<CustomField>
    <fullName>SocialMedia__c</fullName>
    <label>Social Media</label>
    <length>255</length>
    <type>Text</type>
</CustomField>