force-app/main/default/objects/Lead/fields/SubLeadSource__c.field-meta.xml
<CustomField>
    <fullName>SubLeadSource__c</fullName>
    <label>Sub Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sub1</fullName>
            </value>
            <value>
                <fullName>Sub2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>