force-app/main/default/objects/Lead/fields/TypeofBusiness__c.field-meta.xml
<CustomField>
    <fullName>TypeofBusiness__c</fullName>
    <label>Type of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeofBusiness</valueSetName>
    </valueSet>
</CustomField>