force-app/main/default/objects/Lead/fields/WebtoLead__c.field-meta.xml
<CustomField>
    <fullName>WebtoLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web-to-Lead</label>
    <type>Checkbox</type>
</CustomField>