force-app/main/default/objects/Lead/fields/WeChatID__c.field-meta.xml
<CustomField>
    <fullName>WeChatID__c</fullName>
    <label>WeChat ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>