force-app/main/default/objects/Lead/fields/WhatsAppID__c.field-meta.xml
<CustomField>
    <fullName>WhatsAppID__c</fullName>
    <label>WhatsApp ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>