force-app/main/default/objects/Lead/recordTypes/Corporate.recordType-meta.xml
<RecordType>
    <fullName>Corporate</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Corporate</label>
</RecordType>