force-app/main/default/objects/Lead/validationRules/BirthdateNotTodayOrFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>BirthdateNotTodayOrFuture</fullName>
    <active>true</active>
    <description>To ensures that the Birthdate field contains a past date, preventing users from entering today&apos;s date or any future date.</description>
    <errorConditionFormula>Birthdate__c &gt;= TODAY()</errorConditionFormula>
    <errorDisplayField>Birthdate__c</errorDisplayField>
    <errorMessage>Please enter a valid date of birth.</errorMessage>
</ValidationRule>