force-app/main/default/objects/Lead/validationRules/ChangeStatusConvertedToNew.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeStatusConvertedToNew</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;New&quot;),
ISPICKVAL(PRIORVALUE( Status ), &quot;Converted&quot;)

)</errorConditionFormula>
    <errorMessage>You cannot change the status when the Lead status is &apos;Converted&apos;.</errorMessage>
</ValidationRule>