force-app/main/default/objects/Lead/validationRules/CheckLeadRejected.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckLeadRejected</fullName>
    <active>true</active>
    <description>If status is Rejected, Reject Reason must not be blank</description>
    <errorConditionFormula>AND(
ISPICKVAL(  Status  ,&quot;Rejected&quot;),
ISBLANK( Text( RejectReason__c)  )
)</errorConditionFormula>
    <errorDisplayField>RejectReason__c</errorDisplayField>
    <errorMessage>Please input Reject Reason</errorMessage>
</ValidationRule>