force-app/main/default/objects/Lead/validationRules/ConsentDateNotBeFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>ConsentDateNotBeFuture</fullName>
    <active>true</active>
    <description>To ensures that the consent date field contains a past date, preventing users from entering a future date.</description>
    <errorConditionFormula>ConsentDate__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>ConsentDate__c</errorDisplayField>
    <errorMessage>Please enter a valid consent date.</errorMessage>
</ValidationRule>