force-app/main/default/objects/Lead/validationRules/DoNotEditWhenRejected.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotEditWhenRejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(PRIORVALUE(  Status  ), &quot;Rejected&quot;)



)</errorConditionFormula>
    <errorMessage>Cannot edit all information when the Lead Status is &quot;Rejected&quot;</errorMessage>
</ValidationRule>