force-app/main/default/objects/Lead/listViews/Sales_Chinese_Group_Lead.listView-meta.xml
<ListView>
    <fullName>Sales_Chinese_Group_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Chinese Group</label>
    <queue>Sales_Chinese_Group</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>