force-app/main/default/objects/Lead/listViews/Sales_Group_Lead.listView-meta.xml
<ListView>
    <fullName>Sales_Group_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Group</label>
    <queue>Sales_Group</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>