force-app/main/default/objects/Lead/listViews/Salesforeign_Lead.listView-meta.xml
<ListView>
    <fullName>Salesforeign_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Foreign</label>
    <queue>Salesforeign</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>